Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2311039 by drunken monkey: Fixed missing dependency injection for all form
  and plugin classes.
- #2745655 by drunken monkey: Added test for (NOT) NULL conditions on fulltext
  fields in DB backend.
- #2574889 by drunken monkey, ChristianAdamski: Added Tour module integration.
- #2814925 by kducharm, drunken monkey, Cyberwolf: Fixed indexing of computed
  fields.
- #2852807 by alan-ps: Fixed CheckStyle warnings in this project.
- #2659868 by borisson_, drunken monkey: Fixed CacheabilityTest to make sure it
  displays the rendered entities.
- #2853049 by Blanca.Esqueda: Fixed config schema error for Views date filters.
- #2847810 by JayKandari: Added Stemmer to ProcessorIntegrationTest.
- #2753667 by pfrenssen, drunken monkey, borisson_, idimopoulos, sandervd,
  sardara: Improved Views cache plugins and their cache metadata.
- #2843854 by becw, drunken monkey: Fixed date filters in search views.
- #2753763 by drholera, drunken monkey: Added a logging trait which can also
  log exceptions.
- #2850025 by alan-ps: Added a "label_collection" property for our entity types.
- #2851533 by drunken monkey: Adapted the tests to the latest Core changes.
- #2491175 by drunken monkey, ptmkenny: Added a new "Entity status" processor
  to replace "Node status".
- #2681273 by drunken monkey, borisson_: Added plugin descriptions consistently
  to the UI.
- #2642792 by drunken monkey: Fixed and expanded the RenderedItemTest.
- #2844527 by ayalon, drunken monkey: Added some contextual filters for Views.
- #2847307 by JayKandari, drunken monkey: Removed "Display" suffix from our
  search display plugins.
- #2849507 by drunken monkey: Fixed test fails on Drupal 8.4.
- #2846255 by drunken monkey: Fixed displayed order of processors in UI.
- #2656916 by drunken monkey: Removed unused field dependency calculation
  method.
- #2844192 by BR0kEN, drunken monkey: Fixed failure in DB backend when setting