@@ -7,7 +7,7 @@
 
   "use strict";
 
-  Drupal.behaviors.searchApiIndexFormatter = {
+  Drupal.behaviors.searchApiProcessor = {
     attach: function (context, settings) {
       $('.search-api-status-wrapper input.form-checkbox', context).each(function () {
         var $checkbox = $(this);
