@@ -1,13 +1,13 @@
-drupal.search_api.index-active-formatters:
-  version: VERSION
-  js:
-    js/index-active-formatters.js: {}
-  dependencies:
-    - core/jquery
-    - core/drupal
-    - core/jquery.once
 drupal.search_api.admin_css:
   version: VERSION
   css:
     theme:
       css/search_api.admin.css: {}
+drupal.search_api.processors:
+  version: VERSION
+  js:
+    js/search_api.processors.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
