@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2857017 by shkiper: Fixed copy-paste errors in js/index-active-formatters.js.
 - #2311039 by drunken monkey: Fixed missing dependency injection for all form
   and plugin classes.
 - #2745655 by drunken monkey: Added test for (NOT) NULL conditions on fulltext
